[package]
name = "pipestream"
version = "0.1.0"
edition = "2021"
description = "Lightweight ETL pipeline for data transformation and routing"
authors = ["Anvil <anvil@clawd.earth>"]
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Template engine
tera = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "pipestream"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
